[gd_scene load_steps=72 format=2]

[ext_resource path="res://graphics/PCMonitor.png" type="Texture" id=1]
[ext_resource path="res://sound effects/message-incoming-2.mp3" type="AudioStream" id=2]
[ext_resource path="res://Level/ComputerMonitor.gd" type="Script" id=3]
[ext_resource path="res://fonts/ArialTh.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Level/AnswerGraphics/1.1.png" type="Texture" id=5]
[ext_resource path="res://Level/Answer2.gd" type="Script" id=6]
[ext_resource path="res://Level/SlotAnswer.gd" type="Script" id=7]
[ext_resource path="res://Level/Answer1.gd" type="Script" id=8]
[ext_resource path="res://Level/ContinueButton.gd" type="Script" id=9]
[ext_resource path="res://Level/AnswerGraphics/AnswerSlot.png" type="Texture" id=10]
[ext_resource path="res://Level/HBoxContainer_questionfield.gd" type="Script" id=11]
[ext_resource path="res://Level/AnswerGraphics/UsernameInput_theme.tres" type="Theme" id=12]
[ext_resource path="res://Level/UsernameInput.gd" type="Script" id=13]
[ext_resource path="res://Level/Answer3.gd" type="Script" id=14]
[ext_resource path="res://Level/AnswerGraphics/1.2.png" type="Texture" id=15]
[ext_resource path="res://Level/AnswerGraphics/1.3.png" type="Texture" id=16]
[ext_resource path="res://fonts/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://graphics/Tagebuch_Icon.png" type="Texture" id=18]
[ext_resource path="res://graphics/Tagebuch_Icon_Kontur.png" type="Texture" id=19]
[ext_resource path="res://graphics/continue_btn.png" type="Texture" id=22]
[ext_resource path="res://graphics/Tagebuch_bg_Lesezeichen.png" type="Texture" id=23]
[ext_resource path="res://sound effects/book-closing.mp3" type="AudioStream" id=24]
[ext_resource path="res://fonts/AYearWithoutRain.ttf" type="DynamicFontData" id=25]

[sub_resource type="DynamicFont" id=8]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=9]
size = 35
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.054902, 0.0313726, 0.580392, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.980392, 0.933333, 0.933333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.054902, 0.0313726, 0.580392, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 2
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.678431, 0.666667, 0.92549, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=1]
size = 55
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.807843, 0.768627, 0.768627, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 2048, 2048 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 2048, 2048 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 2048, 2048 )

[sub_resource type="DynamicFont" id=30]
size = 32
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=46]
size = 32
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="StyleBoxFlat" id=47]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=48]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=49]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=50]
size = 32
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=52]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=53]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=54]
size = 35
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=55]
size = 30
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=56]
size = 30
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=57]
size = 17
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=58]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=59]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=60]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )

[sub_resource type="DynamicFont" id=34]
size = 32
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=38]
size = 30
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=39]
size = 25
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=40]
size = 27
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=45]
bg_color = Color( 0.109804, 0.156863, 0.403922, 1 )

[sub_resource type="DynamicFont" id=41]
size = 23
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=43]
bg_color = Color( 0.258824, 0.333333, 0.717647, 1 )

[sub_resource type="StyleBoxFlat" id=44]
bg_color = Color( 0.109804, 0.156863, 0.403922, 1 )

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.109804, 0.156863, 0.403922, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.258824, 0.333333, 0.717647, 1 )

[node name="ComputerMonitor" type="Node2D"]
script = ExtResource( 3 )

[node name="PCBoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 7.363

[node name="PCMonitor" type="TextureRect" parent="."]
margin_left = 1.0
margin_right = 1921.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="Tip2" type="Popup" parent="PCMonitor"]
margin_left = 1385.0
margin_top = 4.0
margin_right = 1836.0
margin_bottom = 54.0
rect_min_size = Vector2( 451, 50 )

[node name="NinePatchRect" type="NinePatchRect" parent="PCMonitor/Tip2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tip2" type="Label" parent="PCMonitor/Tip2/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0.2, 0.835294, 0.537255, 1 )
custom_fonts/font = SubResource( 8 )
text = "Click to drag then drop in the answer field above"
valign = 1

[node name="Button_Tip2" type="Button" parent="PCMonitor"]
margin_left = 1845.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 66.0
custom_colors/font_color_hover = Color( 0.0980392, 0.494118, 0.235294, 1 )
custom_colors/font_color_pressed = Color( 0.0980392, 0.494118, 0.235294, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "tip"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control_Application" type="Control" parent="CanvasLayer"]
margin_left = 468.0
margin_top = 158.0
margin_right = 1422.0
margin_bottom = 809.0
mouse_filter = 2

[node name="VBoxContainer_answerfield" type="VBoxContainer" parent="CanvasLayer/Control_Application"]
margin_left = 4.0
margin_top = 350.0
margin_right = 957.0
margin_bottom = 643.0
rect_min_size = Vector2( 953, 1 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Answer1" type="TextureRect" parent="CanvasLayer/Control_Application/VBoxContainer_answerfield"]
margin_left = 270.0
margin_right = 683.0
margin_bottom = 69.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 5 )
script = ExtResource( 8 )

[node name="Answer2" type="TextureRect" parent="CanvasLayer/Control_Application/VBoxContainer_answerfield"]
margin_left = 214.0
margin_top = 73.0
margin_right = 738.0
margin_bottom = 134.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 16 )
script = ExtResource( 6 )

[node name="Answer3" type="TextureRect" parent="CanvasLayer/Control_Application/VBoxContainer_answerfield"]
margin_left = 204.0
margin_top = 138.0
margin_right = 749.0
margin_bottom = 236.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 15 )
script = ExtResource( 14 )

[node name="ContinueButton" type="Button" parent="CanvasLayer/Control_Application/VBoxContainer_answerfield"]
margin_left = 823.0
margin_top = 240.0
margin_right = 953.0
margin_bottom = 293.0
rect_min_size = Vector2( 130, 20 )
size_flags_horizontal = 8
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 27 )
custom_styles/pressed = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = " "
icon = ExtResource( 22 )
align = 2
script = ExtResource( 9 )

[node name="HBoxContainer_questionfield" type="HBoxContainer" parent="CanvasLayer/Control_Application"]
margin_left = 120.0
margin_top = -10.0
margin_right = 926.0
margin_bottom = 238.0
script = ExtResource( 11 )

[node name="Label1" type="Label" parent="CanvasLayer/Control_Application/HBoxContainer_questionfield"]
margin_top = 24.0
margin_right = 412.0
margin_bottom = 224.0
rect_min_size = Vector2( 200, 200 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Excavation Application"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/Control_Application/HBoxContainer_questionfield/Label1"]
margin_left = 11.0
margin_top = 120.0
margin_right = 427.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Insert Name of Applicant:"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UsernameInput" type="LineEdit" parent="CanvasLayer/Control_Application/HBoxContainer_questionfield/Label1/Label2"]
margin_left = 13.0
margin_top = 75.0
margin_right = 294.0
margin_bottom = 132.0
input_pass_on_modal_close_click = false
theme = ExtResource( 12 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
max_length = 22
caret_blink = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SlotAnswer" type="TextureRect" parent="CanvasLayer/Control_Application/HBoxContainer_questionfield/Label1/Label2"]
margin_left = 83.0
margin_top = 75.0
margin_right = 594.0
margin_bottom = 167.0
texture = ExtResource( 10 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button_Diary" type="Button" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 156.0
margin_bottom = 145.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 13 )

[node name="Diary" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Diary_texture" type="TextureRect" parent="Diary"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 23 )

[node name="Button_Glossar" type="Button" parent="Diary/Diary_texture"]
margin_left = 152.0
margin_top = 329.0
margin_right = 295.0
margin_bottom = 384.0
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 30 )
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
text = "Glossary"

[node name="Button_Glossar1" type="Button" parent="Diary/Diary_texture/Button_Glossar"]
visible = false
margin_left = 152.0
margin_top = 329.0
margin_right = 295.0
margin_bottom = 384.0
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 46 )
custom_styles/hover = SubResource( 47 )
custom_styles/pressed = SubResource( 48 )
custom_styles/normal = SubResource( 49 )
text = "Glossary"

[node name="Button_Close1" type="Button" parent="Diary/Diary_texture/Button_Glossar"]
visible = false
margin_left = 216.0
margin_top = 444.0
margin_right = 298.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 50 )
custom_styles/hover = SubResource( 51 )
custom_styles/pressed = SubResource( 52 )
custom_styles/normal = SubResource( 53 )
text = "Close"

[node name="Label_titel1" type="Label" parent="Diary/Diary_texture/Button_Glossar"]
margin_left = 271.0
margin_top = -194.0
margin_right = 650.0
margin_bottom = -129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 54 )
text = "Glossary"
align = 1

[node name="term1" type="Label" parent="Diary/Diary_texture/Button_Glossar"]
margin_left = 208.0
margin_top = -151.0
margin_right = 715.0
margin_bottom = 582.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 55 )
text = "Term
artefact
burial mound
celts


context
excavation journal


field plan"
align = 1

[node name="explanation1" type="Label" parent="Diary/Diary_texture/Button_Glossar"]
margin_left = 801.0
margin_top = -160.0
margin_right = 1433.0
margin_bottom = 607.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 56 )
text = "Explanation
An object made by humans
Burial with overlying earth mound
Also known as Gauls or Gallates, a collection of
groups in Iron Age Europe that shared cultural
 similarities
Relationship of all aspects of a feature
A journal in which the head of the excavation
notes down all events relating to the
excavation 
Plan of the excavation site showing the it's
borders and all the fund structures (numbered).
Serves as overview, documentation and helps 
to recognize bigger patterns."

[node name="Button_nextPage1" type="Button" parent="Diary/Diary_texture/Button_Glossar"]
margin_left = 1240.0
margin_top = 565.0
margin_right = 1388.0
margin_bottom = 605.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 57 )
custom_styles/hover = SubResource( 58 )
custom_styles/pressed = SubResource( 59 )
custom_styles/normal = SubResource( 60 )
text = "to page down"

[node name="Button_Close" type="Button" parent="Diary/Diary_texture"]
margin_left = 216.0
margin_top = 444.0
margin_right = 298.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 34 )
custom_styles/hover = SubResource( 35 )
custom_styles/pressed = SubResource( 36 )
custom_styles/normal = SubResource( 37 )
text = "Close"

[node name="Diary_Intro_Title" type="Label" parent="Diary/Diary_texture"]
margin_left = 395.0
margin_top = 144.0
margin_right = 825.0
margin_bottom = 198.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 38 )
text = "The Heuneburg Excavation Diary"

[node name="Diary_Intro_Txt" type="Label" parent="Diary/Diary_texture"]
margin_left = 346.0
margin_top = 214.0
margin_right = 890.0
margin_bottom = 947.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 39 )
text = "Welcome to the Heuneburg Excavation Diary, your trusty chronicle of progress and discovery!
As you complete mini missions and unearth ancient secrets, this diary will fill itself with the tales of your archaeological adventures.
Every puzzle solved, every artifact found, and every decision made will be recorded here - make sure to check it out regularly. Think of it as your personal time capsule, capturing the highlights of your journey through history. 
So dive in, get your hands dirty, and watch as your achievements turn into entries in this ever-growing log.

Ready to make your mark on history? Let’s see what fascinating stories you’ll uncover next!"
autowrap = true

[node name="BookClose" type="AudioStreamPlayer2D" parent="Diary"]
stream = ExtResource( 24 )

[node name="Application_intro" type="Label" parent="."]
margin_left = 473.0
margin_top = 152.0
margin_right = 1423.0
margin_bottom = 813.0
custom_fonts/font = SubResource( 40 )
custom_styles/normal = SubResource( 45 )
text = "
Hey you excited archeologist!

You have to fill out your scientific application before you can start
digging in your sandbox game!! (even though it is not a sandbox game).

But why bother with creating a scientific application before starting research and renting
extremely expensive vehicles?
 
It’s mostly about the money!

If you skip details or get something wrong in the application, you might end up with no funds at all.
That means no money to support your work. Filling out that application carefully means you can actually do the cool experiments you’re thinking about, not just dream about them. Take your time
with it, because getting the funding right means you get to dig into the real science!"
align = 1
autowrap = true

[node name="Close_explanation" type="Button" parent="Application_intro"]
margin_left = 392.0
margin_top = 472.0
margin_right = 561.0
margin_bottom = 527.0
custom_fonts/font = SubResource( 41 )
custom_styles/hover = SubResource( 43 )
custom_styles/pressed = SubResource( 44 )
custom_styles/normal = SubResource( 42 )
text = "Understood, continue!"

[connection signal="pressed" from="PCMonitor/Button_Tip2" to="." method="_on_Button_Tip2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control_Application/VBoxContainer_answerfield/ContinueButton" to="CanvasLayer/Control_Application/VBoxContainer_answerfield/Answer1" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control_Application/VBoxContainer_answerfield/ContinueButton" to="CanvasLayer/Control_Application/VBoxContainer_answerfield/Answer2" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control_Application/VBoxContainer_answerfield/ContinueButton" to="CanvasLayer/Control_Application/VBoxContainer_answerfield/Answer3" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control_Application/VBoxContainer_answerfield/ContinueButton" to="CanvasLayer/Control_Application/VBoxContainer_answerfield/ContinueButton" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control_Application/VBoxContainer_answerfield/ContinueButton" to="CanvasLayer/Control_Application/HBoxContainer_questionfield" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control_Application/VBoxContainer_answerfield/ContinueButton" to="CanvasLayer/Control_Application/HBoxContainer_questionfield/Label1/Label2/UsernameInput" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control_Application/VBoxContainer_answerfield/ContinueButton" to="CanvasLayer/Control_Application/HBoxContainer_questionfield/Label1/Label2/SlotAnswer" method="_on_ContinueButton_pressed"]
[connection signal="text_changed" from="CanvasLayer/Control_Application/HBoxContainer_questionfield/Label1/Label2/UsernameInput" to="CanvasLayer/Control_Application/HBoxContainer_questionfield/Label1/Label2/UsernameInput" method="_on_UsernameInput_text_changed"]
[connection signal="pressed" from="Button_Diary" to="." method="_on_Button_Diary_pressed"]
[connection signal="pressed" from="Diary/Diary_texture/Button_Glossar" to="." method="_on_Button_Glossar_pressed"]
[connection signal="pressed" from="Diary/Diary_texture/Button_Close" to="." method="_on_Button_Close_pressed"]
[connection signal="pressed" from="Application_intro/Close_explanation" to="." method="_on_Close_explanation_pressed"]
